# typing-test

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: multplatform-ci-cd.yml  unit-tests.yml
application/: __init__.py  main.py  version.txt
application/controllers/: controls.py  phrases.py
application/view/: pages.py  router.py  start.py  statistics.py  typing.py
tests/: conftest.py  package_test.py
